2007-09-03  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.2

2007-09-03  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Shells.pm (get): get list of unique elements.

2007-08-29  Markus Kanet  <darkvision@gmx.info>

	* Init/Services.pm: Apply correctly the information for Slackware.
	Fixes GNOME Bug #471254.

2007-08-28  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.1

2007-08-28  Sasa Ostrouska  <saxa@droplinegnome.org>

	* Utils/Platform.pm: Support Slackware 11.0 and 12.0.

2007-08-27  Carlos Garnacho  <carlosg@gnome.org>

        * Utils/Backend.pm: make --platform work again

2007-08-27  Carlos Garnacho  <carlosg@gnome.org>

        * Init/Services.pm: Fixes for Slackware code.

2007-08-27  Carlos Garnacho  <carlosg@gnome.org>

        * Net-DBus/*: update to Net::DBus 0.33.5

2007-08-24  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_interface_parse_table)
	(get_interface_replace_table): Fix wireless settings parsing/saving
	for Slackware.

2007-07-10  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.0

2007-07-06  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_encrypted_wpa_psk): function to get encrypted
	psk.
	(set_debian_key): use it here.

2007-07-06  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_available_encryptions): add wpa to plain
	debian too.

2007-07-05  Carlos Garnacho  <carlosg@gnome.org>

	Added WPA/WPA2 PSK wireless encryption support (wext driver), at the
	moment just for debian like distros (specifically ubuntu >= 7.04). 
	Fixes GNOME bug #161376

	* Network/Ifaces.pm (get_debian_key_type) (set_debian_key)
	(set_debian_essid): Added , unified functions for handling essid/key
	for wep/wpa.
	(get_interface_parse_table) (get_interface_replace_table): use these 
	functions.
	(get_available_encryptions): add wpa-psk and wpa2-psk for ubuntu.

	* Utils/Platform.pm (ensure_distro_map): Add Gutsy to the list.

2007-07-05  Carlos Garnacho  <carlosg@gnome.org>
